; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_rewind/extr_copy_fetch.c_execute_pagemap.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_rewind/extr_copy_fetch.c_execute_pagemap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BLCKSZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @execute_pagemap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @execute_pagemap(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @datapagemap_iterate(i32* %8)
  store i32* %9, i32** %5, align 8
  br label %10

10:                                               ; preds = %14, %2
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 @datapagemap_next(i32* %11, i32* %6)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @BLCKSZ, align 4
  %17 = mul nsw i32 %15, %16
  store i32 %17, i32* %7, align 4
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @BLCKSZ, align 4
  %22 = add nsw i32 %20, %21
  %23 = call i32 @rewind_copy_file_range(i8* %18, i32 %19, i32 %22, i32 0)
  br label %10

24:                                               ; preds = %10
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @pg_free(i32* %25)
  ret void
}

declare dso_local i32* @datapagemap_iterate(i32*) #1

declare dso_local i64 @datapagemap_next(i32*, i32*) #1

declare dso_local i32 @rewind_copy_file_range(i8*, i32, i32, i32) #1

declare dso_local i32 @pg_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
